ros2_ws/log/build_2024-09-26_15-54-42/opencv_test_py/stderr.log
  File "/home/swati/VBM/ros2_ws/install/opencv_test_py/lib/python3.10/site-packages/opencv_test_py/test1.py", line 107
    self.get_logger().info(f"{"number of pixels"} = {num_pixels}"
                               ^^^^^^
SyntaxError: f-string: expecting '}'

